fix code smells induced by java upgrade